src/assets/styles/base/_base.scss
// -----------------------------------------------------------------------------
// This file contains very basic styles.
// -----------------------------------------------------------------------------
@use "sass:math";

body {
    background: var(--fl-bgColor, var(--indigo-100));
    color: var(--fl-fgColor, var(--black));
    display: flex;
    flex-direction: column;
    font-family: var(--fl-font-family, var(--ff-sans));
    font-size: var(--step-0);
    font-weight: var(--fw-normal);
    justify-content: flex-start;
    line-height: calc(1.5 * var(--fl-lineSpace-factor, 1));
    min-block-size: 100vh;
}

small,
.small {
    font-size: var(--step--1);
    line-height: calc(1.6 * var(--fl-lineSpace-factor, 1));
}

a {
    color: var(--fl-linkColor);
    font-family: var(--fl-font-family, var(--ff-display));
    text-decoration: underline;
}

main,
footer {
    a {
        border-radius: rem(5);
    }

    a:hover,
    a:focus,
    a:active {
        outline-style: solid;
        outline-width: rem(3);
    }

    a:hover {
        background: var(--fl-linkColor, var(--accent, var(--yellow-500)));
        color: var(--fl-bgColor, currentColor);
        outline-color: var(--fl-linkColor, var(--accent, var(--yellow-500)));
    }

    a:focus {
        outline-color: var(--fl-linkColor, var(--indigo-800));
        outline-offset: rem(3);
        outline-width: rem(3);
    }

    a:active {
        background: var(--fl-linkColor, var(--indigo-800));
        color: var(--fl-bgColor, var(--white));
        outline-color: var(--fl-linkColor, var(--indigo-800));
    }
}

a[hreflang],
a[download],
a[rel="external"] {
    svg {
        display: inline-block;
        inline-size: 1em;
    }

    svg:first-child {
        margin-inline-end: 0.25em;
    }

    svg:last-child {
        margin-inline-start: 0.25em;
    }
}

a[rel="home"] {
    border-radius: rem(5);
}

a[hreflang] {
    font-size: var(--step-1);
    font-weight: var(--fw-semibold);
    margin-block-start: var(--step-2);
}

.content a:visited {
    text-decoration-color: var(--fl-linkColor, var(--yellow-500));
}

main h1,
main h2,
main h3,
main h4,
.project__link {
    a:not([rel="external"])::after {
        background: currentcolor;
        content: "";
        margin-block-end: rem(-4);
        margin-inline-start: 0;
        mask-image: url("../images/internal.svg");
        mask-position: center;
        mask-repeat: no-repeat;
        mask-size: 1.5em;
        padding-inline-start: 1em;
    }
}

blockquote {
    padding-inline-start: rem(32);
}

* + blockquote {
    margin-block-start: rem(18);
}

.content,
.section {
    ul {
        list-style: none;
        padding-inline-start: rem(20);
    }

    ol {
        list-style-type: decimal;
    }

    li {
        line-height: calc(math.div(24, 16) * var(--fl-lineSpace-factor, 1.5));
    }

    ul li::before {
        background-color: var(--fl-fgColor, var(--grey-200));
        block-size: 0.3em;
        border-radius: 50%;
        content: "";
        display: inline-block;
        inline-size: 0.3em;
        margin-block: 0.2em;
        margin-inline: 0 rem(8);
        outline: solid var(--fl-fgColor, var(--gery-200));
    }

    ul > li > ul li::before {
        background-color: transparent;
        outline: solid;
    }

    ul > li > ul > li > ul li::before {
        background-color: var(--fl-fgColor, var(--grey-200));
        border-radius: unset;
    }
}

* + p,
* + ul,
* + ol {
    margin-block: rem(15);
}

@each $name, $color in $colors {
    .section.section--bg-#{$name} {
        background: var(--fl-bgColor, $color);
    }
}

.section.section--bg-indigo-800 {
    --accent: var(--indigo-500);
}

.section.section--bg-blue-500,
.section.section--bg-coral-500,
.section.section--bg-yellow-500 {
    --accent: var(--white);
}

@each $name, $color in $colors {
    .section.section--fg-#{$name} {
        color: var(--fl-fgColor, $color);
    }
}

